tests/Rules/Aria/Fixtures/invalid/menuitem_missing_parent.html.twig
<div role="menuitem">Orphan</div>
